test/types/sync/ferguson/non-nilable-single-error.good
non-nilable-single-error.chpl:2: error: single variables containing non-nilable classes are not currently supported
